--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     button, select{width:100%;padding:.5rem;font-size:1rem;margin:.5rem 0}
     #status{margin:1rem 0;color:#d00}
   </style>
+
+  <!-- Google Identity Services cho web -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <!-- Capacitor runtime (khi build native sẽ tự chép) -->
+  <script src="capacitor.js"></script>
 </head>
 <body>
   <h1>Check-In Ca Trực</h1>
@@ -31,7 +36,8 @@
   <script>
   (function(){
     const API = 'https://script.google.com/macros/s/AKfycbw5dqnvTfMuMPjIkdWapz7HC9k15NiKImjhkMtPa1NymMuvtZcsf9gkfZ4BWtG2q8KkcA/exec';
-    let userEmail='', watchId=null;
+    const WEB_CLIENT_ID = '280769604046-iiloggjv492ro50phm1qnp0l3ni0b4l5.apps.googleusercontent.com';
+    let userEmail = '', watchId = null;
 
     const unitSel   = document.getElementById('unitSel');
     const empSel    = document.getElementById('empSel');
@@ -45,19 +51,36 @@
     document.addEventListener('DOMContentLoaded', init);
 
     function init(){
-      // 1) Load ĐƠN VỊ qua JSONP
+      // 1) Load Đơn vị qua JSONP
       jsonp(`${API}?list=units`, onUnits);
 
-      // 2) Login (web-only GSI; native ignore)
-      loginBtn.onclick = () => alert('Hãy tích hợp OAuth native/web tại bước sau.');
+      // 2) Thiết lập đăng nhập
+      if (window.Capacitor && Capacitor.isNativePlatform()) {
+        // Native Android/iOS
+        loginBtn.textContent = 'Đăng nhập (Native)';
+        loginBtn.onclick = nativeLogin;
+      } else {
+        // Web
+        window.onload = () => {
+          google.accounts.id.initialize({
+            client_id: WEB_CLIENT_ID,
+            callback: webCredentialResponse
+          });
+          google.accounts.id.renderButton(
+            loginBtn,
+            { theme:'outline', size:'large', text:'signin_with' }
+          );
+        };
+      }
 
       unitSel.onchange = () => {
         empSel.innerHTML = `<option value="">— Nhân viên —</option>`;
-        if (!unitSel.value) return;
-        jsonp(`${API}?list=emps&unit=${unitSel.value}`, onEmps);
+        if (unitSel.value) {
+          jsonp(`${API}?list=emps&unit=${unitSel.value}`, onEmps);
+        }
       };
       startBtn.onclick = startShift;
-      stopBtn.onclick = stopShift;
+      stopBtn.onclick  = stopShift;
     }
 
     // JSONP helper
@@ -72,9 +95,9 @@
       document.body.appendChild(script);
     }
 
-    // Callback xử lý units
+    // Units callback
     function onUnits(res){
-      if (res.status!=='OK'){
+      if (res.status!=='OK') {
         return setStatus('Lỗi load đơn vị: '+res.message, true);
       }
       res.units.forEach(u=>{
@@ -84,9 +107,9 @@
       setStatus('');
     }
 
-    // Callback xử lý emps
+    // Emps callback
     function onEmps(res){
-      if (res.status!=='OK'){
+      if (res.status!=='OK') {
         return setStatus('Lỗi load nhân viên: '+res.message, true);
       }
       res.emps.forEach(e=>{
@@ -96,19 +119,47 @@
       setStatus('');
     }
 
-    // Bắt đầu gửi vị trí (jsonP POST qua GET)
+    // Native login
+    async function nativeLogin(){
+      try {
+        const { GoogleAuth } = Capacitor.Plugins;
+        await GoogleAuth.init({
+          clientId: WEB_CLIENT_ID,
+          scopes: ['profile','email']
+        });
+        const user = await GoogleAuth.signIn();
+        userEmail = user.email;
+        userBlock.innerHTML = `<p>Xin chào, ${userEmail}</p>`;
+      } catch(e){
+        setStatus('Lỗi login native: '+e, true);
+      }
+    }
+
+    // Web login callback
+    function webCredentialResponse(resp){
+      fetch(`https://www.googleapis.com/oauth2/v3/tokeninfo?id_token=${resp.credential}`)
+        .then(r=>r.json())
+        .then(u=>{
+          userEmail = u.email;
+          userBlock.innerHTML = `<p>Xin chào, ${userEmail}</p>`;
+        })
+        .catch(e=> setStatus('Lỗi login web: '+e, true));
+    }
+
+    // Start sending location
     function startShift(){
       if (watchId) return;
-      if (!userEmail || !unitSel.value || !empSel.value || !shiftSel.value){
+      if (!userEmail || !unitSel.value || !empSel.value || !shiftSel.value) {
         return setStatus('Vui lòng đăng nhập và chọn đủ thông tin', true);
       }
       watchId = navigator.geolocation.watchPosition(pos=>{
         const lat = pos.coords.latitude;
         const lon = pos.coords.longitude;
-        const q = `${API}?unit=${unitSel.value}`
-                + `&empCode=${empSel.value}`
-                + `&shift=${shiftSel.value}`
-                + `&lat=${lat}&lon=${lon}`;
+        const q = `${API}`
+          + `?unit=${unitSel.value}`
+          + `&empCode=${empSel.value}`
+          + `&shift=${shiftSel.value}`
+          + `&lat=${lat}&lon=${lon}`;
         jsonp(q, res=>{
           if (res.status!=='OK') setStatus('Upload lỗi: '+res.message, true);
         });
@@ -121,7 +172,7 @@
       setStatus('Đang gửi vị trí…');
     }
 
-    // Dừng gửi
+    // Stop sending
     function stopShift(){
       if (watchId) navigator.geolocation.clearWatch(watchId);
       watchId = null;
