--- a/dashboard.html
+++ b/dashboard.html
@@ -1,32 +1,119 @@
-<!DOCTYPE html><html lang="vi">
+<!DOCTYPE html>
+<html lang="vi">
 <head>
-  <meta charset="utf-8">
-  <title>Bản đồ nhân viên</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.10.2/dist/leaflet.css"/>
-  <style>html,body,#map{height:100%;margin:0}</style>
+  <meta charset="utf-8" />
+  <title>Giám sát vị trí – Check-in Ca trực</title>
+
+  <!-- Leaflet CSS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.10.2/dist/leaflet.css"
+  />
+
+  <style>
+    :root {
+      --blue: #0d47a1;
+      --gray: #f5f5f5;
+    }
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Tahoma, sans-serif;
+    }
+    header {
+      background: var(--blue);
+      color: #fff;
+      padding: 8px 16px;
+      font-size: 1.1rem;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    header img {
+      height: 28px;
+    }
+    #map {
+      height: calc(100vh - 48px);
+      width: 100%;
+    }
+    /* tooltip gọn gàng hơn  */
+    .leaflet-tooltip {
+      font-size: 0.8rem;
+      padding: 4px 6px;
+    }
+  </style>
 </head>
+
 <body>
-<div id="map"></div>
-<script src="https://unpkg.com/leaflet@1.10.2/dist/leaflet.js"></script>
-<script>
-const URL='https://script.google.com/macros/s/AKfycbyQtOhGWKhT6gEUAlBVfV9iKjqmtHXNaR_2XmkD1XSCOiuNbh6A5ulkq6PxUBWsZpbBgg/exec';
+  <header>
+    <img src="evn_logo.png" alt="EVN" />
+    <span>Bản đồ giám sát vị trí ca trực</span>
+  </header>
 
-const map=L.map('map').setView([16,106],6);
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
-  {attribution:'© OpenStreetMap'}).addTo(map);
+  <div id="map"></div>
 
-async function reload(){
-   const r=await fetch(URL+'?action=getPositions');
-   const j=await r.json(); if(j.status!=='ok') return;
-   map.eachLayer(l=>l.options && l.options.pane==='markerPane' && map.removeLayer(l));
-   const b=[];
-   j.positions.forEach(p=>{
-      L.marker([p.lat,p.lng]).addTo(map)
-         .bindTooltip(`${p.name}<br>${p.unit}<br>${new Date(p.time).toLocaleTimeString()}`);
-      b.push([p.lat,p.lng]);
-   });
-   if(b.length) map.fitBounds(b,{padding:[12,12]});
-}
-reload(); setInterval(reload,15000);
-</script>
-</body></html>
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet@1.10.2/dist/leaflet.js"></script>
+
+  <script>
+    /* ---------- CONFIG ---------- */
+    const SCRIPT_URL =
+      "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLhj-QYblJcT_AL_bY4K8yZFFOLyoMRrGT7RNTmFtAph0cFrx6umsbBjt7sTjjTl598aNKQza4uj-sAUwaUnykNRT0gM6Gl6b9uCemkCmkMb7Dxsf6KnAl1lsxVDIg2l9aci4lavJGxGhnjtETreQA9J48NZliq40syR26SyqjPTW2ZheVnr4K1fjYVD3Iz8g1RZBiyAtajf6vA0c1tbJisAmjXLsOqcp49SaInxLjlegMIh-WQ9q9fmZFEtRS3-1f2S0YnIhAJfiBWPawmSAVQJxM138SzsWu-mQlfb&lib=Mj2tdQ0ba0zXGbvKAwFE7wJKUfz6QF1D1";
+
+    /* ---------- Khởi tạo bản đồ ---------- */
+    const map = L.map("map").setView([16, 106], 6);
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: "© OpenStreetMap contributors",
+    }).addTo(map);
+
+    /* ---------- Hàm tải & vẽ vị trí ---------- */
+    async function loadPositions() {
+      try {
+        const sep = SCRIPT_URL.includes("?") ? "&" : "?";
+        const r = await fetch(`${SCRIPT_URL}${sep}action=getPositions`, {
+          cache: "no-store",
+        });
+        if (!r.ok) throw new Error("status " + r.status);
+        const data = await r.json();
+        if (data.status !== "ok") return;
+
+        // xóa marker cũ
+        map.eachLayer((l) => {
+          if (l.options && l.options.pane === "markerPane") map.removeLayer(l);
+        });
+
+        const bounds = [];
+        data.positions.forEach((p) => {
+          L.marker([p.lat, p.lng])
+            .addTo(map)
+            .bindTooltip(
+              `
+              <strong>${p.name}</strong><br/>
+              ${p.unit}<br/>
+              <em>${timeAgo(p.time)}</em>
+            `,
+              { direction: "top" }
+            );
+          bounds.push([p.lat, p.lng]);
+        });
+        if (bounds.length) map.fitBounds(bounds, { padding: [12, 12] });
+      } catch (e) {
+        console.error("loadPositions", e);
+      }
+    }
+
+    function timeAgo(t) {
+      const d = (Date.now() - new Date(t).getTime()) / 1000;
+      if (d < 60) return d.toFixed(0) + " s";
+      if (d < 3600) return (d / 60).toFixed(0) + " m";
+      return (d / 3600).toFixed(1) + " h";
+    }
+
+    /* ---------- Auto reload mỗi 15 s ---------- */
+    loadPositions();
+    setInterval(loadPositions, 15_000);
+  </script>
+</body>
+</html>
