--- a/dashboard.html
+++ b/dashboard.html
@@ -1,119 +1,83 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8" />
-  <title>Giám sát vị trí – Check-in Ca trực</title>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>EVN Bản đồ giám sát vị trí ca trực</title>
 
-  <!-- Leaflet CSS -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.10.2/dist/leaflet.css"
-  />
+<!-- Leaflet -->
+<link rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <style>
-    :root {
-      --blue: #0d47a1;
-      --gray: #f5f5f5;
-    }
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      font-family: "Segoe UI", Tahoma, sans-serif;
-    }
-    header {
-      background: var(--blue);
-      color: #fff;
-      padding: 8px 16px;
-      font-size: 1.1rem;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-    header img {
-      height: 28px;
-    }
-    #map {
-      height: calc(100vh - 48px);
-      width: 100%;
-    }
-    /* tooltip gọn gàng hơn  */
-    .leaflet-tooltip {
-      font-size: 0.8rem;
-      padding: 4px 6px;
-    }
-  </style>
+<style>
+  body{margin:0;font-family:sans-serif}
+  header{background:#0156a3;color:#fff;padding:12px 16px;font-size:20px;
+         font-weight:600;display:flex;align-items:center;gap:8px}
+  header img{height:28px}
+  #map{height:calc(100vh - 56px);width:100%}
+</style>
 </head>
-
 <body>
   <header>
-    <img src="evn_logo.png" alt="EVN" />
+    <img src="./evn_logo.png" alt="EVN">
     <span>Bản đồ giám sát vị trí ca trực</span>
   </header>
 
   <div id="map"></div>
 
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet@1.10.2/dist/leaflet.js"></script>
+<script>
+/* ===== CONFIG giống app.js ===== */
+const SCRIPT_URL =
+  'https://script.google.com/macros/s/AKfycby3V7ojn7qWvxUds2r4f5mxb96mi3_9nUhp1u5lrOKhYuNlTMcrjKJo7kUbhcwxP--87Q/exec';
+const REFRESH_EVERY = 15_000;
 
-  <script>
-    /* ---------- CONFIG ---------- */
-    const SCRIPT_URL =
-      "https://script.google.com/macros/s/AKfycbyQtOhGWKhT6gEUAlBVfV9iKjqmtHXNaR_2XmkD1XSCOiuNbh6A5ulkq6PxUBWsZpbBgg/exec";
+/* ===== API helper (đã xử lý tiền tố XSSI) ===== */
+async function api(action){
+  const url = SCRIPT_URL + '?action=' + action;
+  const r   = await fetch(url,{redirect:'follow',cache:'no-store'});
+  let txt   = await r.text();
+  const i1  = txt.indexOf('{'); const i2 = txt.indexOf('[');
+  const pos = (i1>=0&&i2>=0)?Math.min(i1,i2):(i1>=0?i1:i2);
+  if(pos>0) txt = txt.slice(pos);
+  return JSON.parse(txt);
+}
 
-    /* ---------- Khởi tạo bản đồ ---------- */
-    const map = L.map("map").setView([16, 106], 6);
-    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-      attribution: "© OpenStreetMap contributors",
-    }).addTo(map);
+/* ===== Init map ===== */
+const map = L.map('map').setView([16,106],6);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+            {attribution:'© OpenStreetMap'}).addTo(map);
 
-    /* ---------- Hàm tải & vẽ vị trí ---------- */
-    async function loadPositions() {
-      try {
-        const sep = SCRIPT_URL.includes("?") ? "&" : "?";
-        const r = await fetch(`${SCRIPT_URL}${sep}action=getPositions`, {
-          cache: "no-store",
-        });
-        if (!r.ok) throw new Error("status " + r.status);
-        const data = await r.json();
-        if (data.status !== "ok") return;
+/* ===== Load + hiển thị vị trí ca trực ===== */
+let refreshTimer = null;
+loadPositions();
+refreshTimer = setInterval(loadPositions, REFRESH_EVERY);
 
-        // xóa marker cũ
-        map.eachLayer((l) => {
-          if (l.options && l.options.pane === "markerPane") map.removeLayer(l);
-        });
+async function loadPositions(){
+  const rs = await api('getPositions');
+  if(rs.status!=='ok') return;
 
-        const bounds = [];
-        data.positions.forEach((p) => {
-          L.marker([p.lat, p.lng])
-            .addTo(map)
-            .bindTooltip(
-              `
-              <strong>${p.name}</strong><br/>
-              ${p.unit}<br/>
-              <em>${timeAgo(p.time)}</em>
-            `,
-              { direction: "top" }
-            );
-          bounds.push([p.lat, p.lng]);
-        });
-        if (bounds.length) map.fitBounds(bounds, { padding: [12, 12] });
-      } catch (e) {
-        console.error("loadPositions", e);
-      }
-    }
+  // xoá marker cũ
+  map.eachLayer(l=>{
+    if(l.options && l.options.pane==='markerPane') map.removeLayer(l);
+  });
 
-    function timeAgo(t) {
-      const d = (Date.now() - new Date(t).getTime()) / 1000;
-      if (d < 60) return d.toFixed(0) + " s";
-      if (d < 3600) return (d / 60).toFixed(0) + " m";
-      return (d / 3600).toFixed(1) + " h";
-    }
+  const bounds = [];
+  rs.positions.forEach(p=>{
+    L.marker([p.lat,p.lng])
+     .addTo(map)
+     .bindTooltip(`${p.name}<br>${p.unit}<br>${timeAgo(p.time)}`);
+    bounds.push([p.lat,p.lng]);
+  });
+  if(bounds.length) map.fitBounds(bounds,{padding:[16,16]});
+}
 
-    /* ---------- Auto reload mỗi 15 s ---------- */
-    loadPositions();
-    setInterval(loadPositions, 15_000);
-  </script>
+function timeAgo(t){
+  const d=(Date.now()-new Date(t).getTime())/1000;
+  if(d<60) return `${d.toFixed(0)} s trước`;
+  if(d<3600) return `${(d/60).toFixed(0)} m trước`;
+  return `${(d/3600).toFixed(1)} h trước`;
+}
+</script>
 </body>
 </html>
