--- a/dashboard.html
+++ b/dashboard.html
@@ -19,11 +19,9 @@
     .filters label{font-weight:500;display:flex;align-items:center;gap:4px}
     .filters input,.filters select{padding:4px 6px;font-size:14px}
 
-    #map{height:calc(100vh - 152px);width:100%}
-    #tbl{width:100%;border-collapse:collapse;font-size:14px}
-    #tbl th,#tbl td{border:1px solid #ccc;padding:4px 6px;text-align:left}
-    #tbl th{background:#0156a3;color:#fff;position:sticky;top:0}
+    #map{height:calc(100vh - 170px);width:100%}
     #report{margin-left:auto}
+    button{padding:6px 10px;font-size:14px}
   </style>
 </head>
 <body>
@@ -34,7 +32,7 @@
 
   <!-- Bộ lọc -->
   <div class="filters">
-    <label>CTY
+    <label>Công ty
       <select id="selComp"><option value="*">*</option></select>
     </label>
 
@@ -42,16 +40,21 @@
       <select id="selUnit"><option value="*">*</option></select>
     </label>
 
+    <label>Ca
+      <select id="selShift"><option value="*">*</option></select>
+    </label>
+
     <label>Nhân viên
       <select id="selEmp"><option value="*">*</option></select>
     </label>
 
-    <label>Đang trong ca
-      <input type="checkbox" id="ckActive" checked />
-    </label>
-
     <label>Tìm
       <input type="text" id="txtSearch" placeholder="Tên / email" />
+    </label>
+
+    <label>
+      <input type="checkbox" id="ckActive" checked>
+      Đang trong ca
     </label>
 
     <button id="btnReload">Lọc</button>
@@ -64,11 +67,10 @@
   /***** CONFIG *****/
   const SCRIPT_URL =
     'https://script.google.com/macros/s/AKfycby3V7ojn7qWvxUds2r4f5mxb96mi3_9nUhp1u5lrOKhYuNlTMcrjKJo7kUbhcwxP--87Q/exec';
-  const REFRESH = 15_000;
+  const REFRESH_MS = 15_000;
 
   /* helpers */
-  const $ = id=>document.getElementById(id);
-
+  const $ = id => document.getElementById(id);
   function timeAgo(t){
     const d=(Date.now()-new Date(t).getTime())/1000;
     if(d<60) return d.toFixed(0)+' s';
@@ -76,109 +78,110 @@
     return (d/3600).toFixed(1)+' h';
   }
   async function api(action,payload={}){
-    const url=SCRIPT_URL+'?'+new URLSearchParams({...payload,action});
-    const r=await fetch(url,{redirect:'follow',cache:'no-store'});
-    let txt=await r.text();
-    const i=Math.min(...['{','['].map(ch=>txt.indexOf(ch)).filter(i=>i>=0));
-    if(i>0) txt=txt.slice(i);
+    const url = SCRIPT_URL+'?'+new URLSearchParams({...payload,action});
+    const r   = await fetch(url,{redirect:'follow',cache:'no-store'});
+    let txt   = await r.text();
+    const i   = Math.min(...['{','['].map(c=>txt.indexOf(c)).filter(i=>i>=0));
+    if(i>0) txt = txt.slice(i);
     return JSON.parse(txt);
   }
 
-  /* map */
-  const map=L.map('map').setView([16,106],6);
+  /* leaflet map */
+  const map = L.map('map').setView([16,106],6);
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
     attribution:'© OpenStreetMap'
   }).addTo(map);
 
-  /* state */
   let allPos=[];
 
-  /* init dropdowns */
+  /* build lookup dropdowns */
   async function initLookups(){
-    const rs=await api('getPositions',{});
+    const rs = await api('getPositions',{});
     if(rs.status!=='ok') return;
-    allPos=rs.positions;
-    fillSelect($('#selComp'),[...new Set(allPos.map(p=>p.comp))]);
-    fillSelect($('#selUnit'),[...new Set(allPos.map(p=>p.unit))]);
-    fillSelect($('#selEmp'),[...new Set(allPos.map(p=>p.name))]);
+    allPos = rs.positions;
+    fill($('#selComp'), [...new Set(allPos.map(p=>p.comp))]);
+    fill($('#selUnit'), [...new Set(allPos.map(p=>p.unit))]);
+    fill($('#selShift'),[...new Set(allPos.map(p=>p.ca))]);
+    fill($('#selEmp'),  [...new Set(allPos.map(p=>p.name))]);
   }
-  function fillSelect(sel,arr){
-    arr.sort().forEach(v=>{
+  function fill(sel,arr){
+    arr.filter(v=>v).sort().forEach(v=>{
       const o=document.createElement('option');o.value=o.textContent=v;sel.appendChild(o);
     });
   }
 
-  /* filtering */
-  async function loadPositions(){
+  /* sync dependent dropdowns */
+  function syncUnit(){
     const comp=$('#selComp').value;
-    const unit=$('#selUnit').value;
-    const emp=$('#selEmp').value;
-    const kw=$('#txtSearch').value.trim().toLowerCase();
-    const onlyOn=$('#ckActive').checked;
+    const units=[...new Set(allPos.filter(p=>comp==='*'||p.comp===comp).map(p=>p.unit))];
+    $('#selUnit').innerHTML='<option value="*">*</option>';fill($('#selUnit'),units);
+    syncShiftEmp();
+  }
+  function syncShiftEmp(){
+    const comp=$('#selComp').value,unit=$('#selUnit').value;
+    const list=allPos.filter(p=>
+      (comp==='*'||p.comp===comp)&&
+      (unit==='*'||p.unit===unit)
+    );
+    const shifts=[...new Set(list.map(p=>p.ca))];
+    const emps  =[...new Set(list.map(p=>p.name))];
+    $('#selShift').innerHTML='<option value="*">*</option>';fill($('#selShift'),shifts);
+    $('#selEmp').innerHTML  ='<option value="*">*</option>';fill($('#selEmp'),emps);
+  }
+
+  $('#selComp').onchange=syncUnit;
+  $('#selUnit').onchange=syncShiftEmp;
+
+  /* draw markers */
+  async function loadPositions(){
+    const comp = $('#selComp').value;
+    const unit = $('#selUnit').value;
+    const ca   = $('#selShift').value;
+    const emp  = $('#selEmp').value;
+    const kw   = $('#txtSearch').value.trim().toLowerCase();
+    const active = $('#ckActive').checked;
     const now=Date.now();
 
-    const rs=await api('getPositions',{});
+    const rs = await api('getPositions',{});
     if(rs.status!=='ok') return;
-    allPos=rs.positions;
+    allPos = rs.positions;
 
-    // clear marker
     map.eachLayer(l=>{ if(l.options&&l.options.pane==='markerPane') map.removeLayer(l); });
 
     const bounds=[];
-    const filtered=allPos.filter(p=>
-        (comp==='*'||p.comp===comp) &&
-        (unit==='*'||p.unit===unit) &&
-        (emp==='*'||p.name===emp) &&
-        (!onlyOn || (now-new Date(p.time).getTime())<3600*1000) &&
-        (kw==='' || p.name.toLowerCase().includes(kw) || p.email.toLowerCase().includes(kw))
-    );
-
-    filtered.forEach(p=>{
+    allPos.filter(p=>
+        (comp==='*'||p.comp===comp)&&
+        (unit==='*'||p.unit===unit)&&
+        (ca==='*'  ||p.ca===ca)&&
+        (emp==='*' ||p.name===emp)&&
+        (!active   ||(now-new Date(p.time).getTime())<3600*1000)&&
+        (kw===''   ||p.name.toLowerCase().includes(kw)||p.email.toLowerCase().includes(kw))
+    ).forEach(p=>{
       L.marker([p.lat,p.lng]).addTo(map)
-        .bindTooltip(`${p.name}<br>${p.unit}<br>${timeAgo(p.time)} trước`);
+        .bindTooltip(`${p.name}<br>${p.unit}<br>${p.ca}<br>${timeAgo(p.time)} trước`);
       bounds.push([p.lat,p.lng]);
     });
     if(bounds.length) map.fitBounds(bounds,{padding:[16,16]});
   }
 
-  /* report CSV */
+  /* export */
   function exportCSV(){
-    if(!allPos.length){ alert('Chưa có dữ liệu'); return; }
-    const rows=[['email','name','unit','comp','lat','lng','time']];
-    allPos.forEach(p=>rows.push([p.email,p.name,p.unit,p.comp,p.lat,p.lng,p.time]));
+    if(!allPos.length){alert('Chưa có dữ liệu');return;}
+    const rows=[["email","name","unit","comp","ca","lat","lng","time"]];
+    allPos.forEach(p=>rows.push([p.email,p.name,p.unit,p.comp,p.ca,p.lat,p.lng,p.time]));
     const csv=rows.map(r=>r.join(',')).join('\n');
     const blob=new Blob([csv],{type:'text/csv'});
     const url=URL.createObjectURL(blob);
-    const a=document.createElement('a');
-    a.href=url;a.download='report.csv';a.click();URL.revokeObjectURL(url);
+    const a=document.createElement('a');a.href=url;a.download='report.csv';a.click();URL.revokeObjectURL(url);
   }
 
-  /* wire events */
   $('#btnReload').onclick=loadPositions;
-  $('#report').onclick=exportCSV;
-  $('#selComp').onchange=()=>syncSub();
-  $('#selUnit').onchange=()=>syncEmp();
+  $('#report').onclick = exportCSV;
 
-  function syncSub(){
-    const comp=$('#selComp').value;
-    const units=[...new Set(allPos.filter(p=>comp==='*'||p.comp===comp).map(p=>p.unit))];
-    $('#selUnit').innerHTML='<option value="*">*</option>';fillSelect($('#selUnit'),units);
-    syncEmp();
-  }
-  function syncEmp(){
-    const comp=$('#selComp').value,unit=$('#selUnit').value;
-    const emps=[...new Set(allPos.filter(p=>
-      (comp==='*'||p.comp===comp)&&
-      (unit==='*'||p.unit===unit)
-    ).map(p=>p.name))];
-    $('#selEmp').innerHTML='<option value="*">*</option>';fillSelect($('#selEmp'),emps);
-  }
-
-  /* kick off */
   (async()=>{
     await initLookups();
     await loadPositions();
-    setInterval(loadPositions, REFRESH);
+    setInterval(loadPositions, REFRESH_MS);
   })();
   </script>
 </body>
